    dialogs
  * Moved identity/easyfind from network to settings 

  [ PA Nilsson ]
  * Removed usermail files, integrated to regular mail controller/views.

 -- Carl Fürstenberg <carl@excito.com>  Tue, 23 Feb 2010 13:48:48 +0100

bubba-frontend (1.3.1) karmic; urgency=low

  * menu model 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 12 Feb 2010 17:37:47 +0100

bubba-frontend (1.3.0) claire estelle; urgency=low

  * Updated version number.

 -- PA Nilsson <pa@excito.com>  Wed, 10 Feb 2010 15:26:01 +0100

bubba-frontend (1.2.4.81) claire estelle; urgency=low

  * Remove option to have 16 characters in WEP (Closes: #1171) 
  * removing cursor_wait on submit for wlan (Closes: #1170) 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 09 Feb 2010 15:05:43 +0100

bubba-frontend (1.2.4.80) claire estelle; urgency=low

  * Disable dhcp checkbox when dns-checkbox deactivated.

 -- PA Nilsson <pa@excito.com>  Tue, 09 Feb 2010 14:22:26 +0100

bubba-frontend (1.2.4.79ubuntu1) claire estelle; urgency=low

  * Fixed to disabale WAN dns/gw.

 -- PA Nilsson <pa@excito.com>  Tue, 09 Feb 2010 13:59:42 +0100

bubba-frontend (1.2.4.79) claire estelle; urgency=low

  * Set/remove promisc mode on eth1 when enable disable wlan. (Tempfix)
  * Extend timeout on bubba_socket_helper.php to not fail on long executions
  * Fixed to disable LAN dns/gw in server mode, closes# 1168.

 -- Tor Krill <tor@excito.com>  Mon,  8 Feb 2010 21:59:11 +0100

bubba-frontend (1.2.4.78) claire estelle; urgency=low

  * remove one shutdown of dnsmasq 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 08 Feb 2010 16:17:49 +0100

bubba-frontend (1.2.4.77) claire estelle; urgency=low

  * channels 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:48:26 +0100

bubba-frontend (1.2.4.76) claire estelle; urgency=low

  * whoopsie whoopsie 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:40:05 +0100

bubba-frontend (1.2.4.75) claire estelle; urgency=low

  * admin 
