@@ -26,6 +26,11 @@ bubba-frontend (1.3.1) karmic; urgency=low
 
  -- Carl Fürstenberg <carl@excito.com>  Fri, 12 Feb 2010 17:37:47 +0100
 
+bubba-frontend (1.3.1) claire estelle; urgency=low
+
+  * Fixed unnecessary restart of dnsmasq + problem with dhcpd being disabled.
+
+ -- PA Nilsson <pa@excito.com>  Fri, 19 Feb 2010 13:03:05 +0100
 bubba-frontend (1.3.0) claire estelle; urgency=low
 
   * Updated version number.
